--- a/QaLegend/test-output/index.html
+++ b/QaLegend/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-QaLegend_Suite" class="navigator-link ">
-                    <span>C:\Users\user\git\repository\QaLegend\iretryanalyzer_testng.xml</span>
+                    <span>C:\Users\user\git\QaLegend\QaLegend\jenkins_testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-QaLegend_Suite" class="navigator-link ">
-                    <span>2 groups</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,22 @@
                     <div class="method-list-content passed suite-QaLegend_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.HomePageTest" class="method navigator-link" hash-for-method="VerifyHomePageTitle">VerifyHomePageTitle</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.LoginPageTest" class="method navigator-link" hash-for-method="verifyUserLogin">verifyUserLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.ProductsPageTest" class="method navigator-link" hash-for-method="VerifyProductsFilter">VerifyProductsFilter</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.LoginPageTest" class="method navigator-link" hash-for-method="verifyUserLoginWithInvalidCredentials(admi, arun@1234)">verifyUserLoginWithInvalidCredentials(admi, arun@1234)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.HomePageTest" class="method navigator-link" hash-for-method="verifyUserLoginDate">verifyUserLoginDate</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.LoginPageTest" class="method navigator-link" hash-for-method="verifyUserLoginWithInvalidCredentials(admi, 123456)">verifyUserLoginWithInvalidCredentials(admi, 123456)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.LoginPageTest" class="method navigator-link" hash-for-method="verifyUserLoginWithInvalidCredentials(admin, 12345)">verifyUserLoginWithInvalidCredentials(admin, 12345)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-QaLegend_Suite -->
@@ -132,36 +137,38 @@
           <div class="suite-QaLegend_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.qalegend.tests.HomePageTest</span>
+              <span class="class-name">com.qalegend.tests.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyHomePageTitle">
-                  </a> <!-- VerifyHomePageTitle -->
-                  <span class="method-name">VerifyHomePageTitle</span>
+                  <a name="verifyUserLogin">
+                  </a> <!-- verifyUserLogin -->
+                  <span class="method-name">verifyUserLogin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyUserLoginDate">
-                  </a> <!-- verifyUserLoginDate -->
-                  <span class="method-name">verifyUserLoginDate</span>
+                  <a name="verifyUserLoginWithInvalidCredentials(admi, arun@1234)">
+                  </a> <!-- verifyUserLoginWithInvalidCredentials(admi, arun@1234) -->
+                  <span class="method-name">verifyUserLoginWithInvalidCredentials</span>
+                  <span class="parameters">(admi, arun@1234)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-QaLegend_Suite-class-passed -->
-          <div class="suite-QaLegend_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.qalegend.tests.ProductsPageTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyProductsFilter">
-                  </a> <!-- VerifyProductsFilter -->
-                  <span class="method-name">VerifyProductsFilter</span>
+                  <a name="verifyUserLoginWithInvalidCredentials(admi, 123456)">
+                  </a> <!-- verifyUserLoginWithInvalidCredentials(admi, 123456) -->
+                  <span class="method-name">verifyUserLoginWithInvalidCredentials</span>
+                  <span class="parameters">(admi, 123456)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyUserLoginWithInvalidCredentials(admin, 12345)">
+                  </a> <!-- verifyUserLoginWithInvalidCredentials(admin, 12345) -->
+                  <span class="method-name">verifyUserLoginWithInvalidCredentials</span>
+                  <span class="parameters">(admin, 12345)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -169,7 +176,7 @@
         </div> <!-- panel QaLegend_Suite -->
         <div panel-name="test-xml-QaLegend_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\git\repository\QaLegend\iretryanalyzer_testng.xml</span>
+            <span class="header-content">C:\Users\user\git\QaLegend\QaLegend\jenkins_testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -177,16 +184,16 @@
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;QaLegend Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
+    &lt;listener class-name=&quot;com.qalegend.generatereport.Listeners&quot;/&gt;
     &lt;listener class-name=&quot;com.qalegend.listeners.AnnotationTransformer&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Edge Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;QaLegend Test&quot;&gt;
     &lt;parameter name=&quot;baseurl&quot; value=&quot;https://qalegend.com/billing/public/login&quot;/&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;Edge&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.qalegend.tests.HomePageTest&quot;/&gt;
-      &lt;class name=&quot;com.qalegend.tests.ProductsPageTest&quot;/&gt;
+      &lt;class name=&quot;com.qalegend.tests.LoginPageTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Edge Test --&gt;
+  &lt;/test&gt; &lt;!-- QaLegend Test --&gt;
 &lt;/suite&gt; &lt;!-- QaLegend Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -198,7 +205,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Edge Test (2 classes)</span>
+                <span class="test-name">QaLegend Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -208,22 +215,6 @@
             <span class="header-content">Groups for QaLegend Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">Regression</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">verifyUserLoginDate</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">Sanity</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">VerifyHomePageTitle</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-QaLegend_Suite" class="panel">
@@ -240,24 +231,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'VerifyProductsFilter')
-data.setCell(0, 2, 'com.qalegend.tests.ProductsPageTest')
-data.setCell(0, 3, 7841);
+data.setCell(0, 1, 'verifyUserLogin')
+data.setCell(0, 2, 'com.qalegend.tests.LoginPageTest')
+data.setCell(0, 3, 7512);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'VerifyHomePageTitle')
-data.setCell(1, 2, 'com.qalegend.tests.HomePageTest')
-data.setCell(1, 3, 3835);
+data.setCell(1, 1, 'verifyUserLoginWithInvalidCredentials')
+data.setCell(1, 2, 'com.qalegend.tests.LoginPageTest')
+data.setCell(1, 3, 1373);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyUserLoginDate')
-data.setCell(2, 2, 'com.qalegend.tests.HomePageTest')
-data.setCell(2, 3, 2680);
+data.setCell(2, 1, 'verifyUserLoginWithInvalidCredentials')
+data.setCell(2, 2, 'com.qalegend.tests.LoginPageTest')
+data.setCell(2, 3, 1289);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verifyUserLoginWithInvalidCredentials')
+data.setCell(3, 2, 'com.qalegend.tests.LoginPageTest')
+data.setCell(3, 3, 1280);
 window.suiteTableData['QaLegend_Suite']= { tableData: data, tableDiv: 'times-div-QaLegend_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-QaLegend_Suite">
               </div> <!-- times-div-QaLegend_Suite -->
             </div> <!-- times-div -->
@@ -283,45 +278,54 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.qalegend.tests.HomePageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.qalegend.tests.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setup(Edge, https://qalegend.com/billing/public/login)</span>
+                <span class="method-name">setup(Chrome, https://qalegend.com/billing/public/login)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">VerifyHomePageTitle</span>
-                <span class="method-start">8321 ms</span>
+                <span class="method-name">verifyUserLogin</span>
+                <span class="method-start">15768 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=VerifyHomePageTitle status=SUCCESS method=HomePageTest.VerifyHomePageTitle()[pri:0,...)</span>
-                <span class="method-start">12157 ms</span>
+                <span class="method-name">closeBrowser([TestResult name=verifyUserLogin status=SUCCESS method=LoginPageTest.verifyUserLogin()[pri:0, instan...)</span>
+                <span class="method-start">23287 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">setup(Edge, https://qalegend.com/billing/public/login)</span>
-                <span class="method-start">13549 ms</span>
+                <span class="method-name">setup(Chrome, https://qalegend.com/billing/public/login)</span>
+                <span class="method-start">23623 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyUserLoginDate</span>
-                <span class="method-start">19889 ms</span>
+                <span class="method-name">verifyUserLoginWithInvalidCredentials(admi, 123456)</span>
+                <span class="method-start">37860 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=verifyUserLoginDate status=SUCCESS method=HomePageTest.verifyUserLoginDate()[pri:0,...)</span>
-                <span class="method-start">22570 ms</span>
+                <span class="method-name">closeBrowser([TestResult name=verifyUserLoginWithInvalidCredentials status=SUCCESS method=LoginPageTest.verifyUse...)</span>
+                <span class="method-start">39153 ms</span>
               </div> <!-- configuration-method after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.qalegend.tests.ProductsPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setup(Edge, https://qalegend.com/billing/public/login)</span>
-                <span class="method-start">23953 ms</span>
+                <span class="method-name">setup(Chrome, https://qalegend.com/billing/public/login)</span>
+                <span class="method-start">39344 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">VerifyProductsFilter</span>
-                <span class="method-start">29579 ms</span>
+                <span class="method-name">verifyUserLoginWithInvalidCredentials(admin, 12345)</span>
+                <span class="method-start">51865 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=VerifyProductsFilter status=SUCCESS method=ProductsPageTest.VerifyProductsFilter()[...)</span>
-                <span class="method-start">37422 ms</span>
+                <span class="method-name">closeBrowser([TestResult name=verifyUserLoginWithInvalidCredentials status=SUCCESS method=LoginPageTest.verifyUse...)</span>
+                <span class="method-start">53147 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup(Chrome, https://qalegend.com/billing/public/login)</span>
+                <span class="method-start">53439 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyUserLoginWithInvalidCredentials(admi, arun@1234)</span>
+                <span class="method-start">63696 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser([TestResult name=verifyUserLoginWithInvalidCredentials status=SUCCESS method=LoginPageTest.verifyUse...)</span>
+                <span class="method-start">65070 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
