--- a/QaLegend/test-output/old/QaLegend Suite/classes.html
+++ b/QaLegend/test-output/old/QaLegend Suite/classes.html
@@ -4,50 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qalegend.tests.HomePageTest</td>
+<td>com.qalegend.tests.LoginPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyHomePageTitle</td>
-<td>Sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyUserLoginDate</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>setup</td>
+<td>verifyUserLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
 <td>&nbsp;</td>
-<td>closeBrowser</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>com.qalegend.tests.ProductsPageTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>VerifyProductsFilter</td>
+<td>verifyUserLoginWithInvalidCredentials</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
