--- a/QaLegend/test-output/old/QaLegend Suite/groups.html
+++ b/QaLegend/test-output/old/QaLegend Suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>HomePageTest.verifyUserLoginDate()[pri:0, instance:com.qalegend.tests.HomePageTest@6e20b53a]<br/></td></tr>
-<tr><td>Sanity</td><td>HomePageTest.VerifyHomePageTitle()[pri:0, instance:com.qalegend.tests.HomePageTest@6e20b53a]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
