--- a/QaLegend/extent-reports/extent-report.html
+++ b/QaLegend/extent-reports/extent-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">QaLegend Project</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 17, 2024 08:36:45 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 18, 2024 12:21:26 AM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLogin</p>
             <p class="text-sm">
-              <span>8:37:02 PM</span> / <span>00:00:07:500</span>
+              <span>12:21:33 AM</span> / <span>00:00:03:845</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLogin</h5>
-<span class='badge badge-success'>06.17.2024 8:37:02 PM</span>
-<span class='badge badge-danger'>06.17.2024 8:37:09 PM</span>
-<span class='badge badge-default'>00:00:07:500</span>
+<span class='badge badge-success'>06.18.2024 12:21:33 AM</span>
+<span class='badge badge-danger'>06.18.2024 12:21:37 AM</span>
+<span class='badge badge-default'>00:00:03:845</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:37:09 PM</td>
+        <td>12:21:37 AM</td>
         <td>
           Test Passed
         </td>
@@ -121,7 +121,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLoginWithInvalidCredentials</p>
             <p class="text-sm">
-              <span>8:37:24 PM</span> / <span>00:00:01:290</span>
+              <span>12:21:42 AM</span> / <span>00:00:00:865</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -130,9 +130,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLoginWithInvalidCredentials</h5>
-<span class='badge badge-success'>06.17.2024 8:37:24 PM</span>
-<span class='badge badge-danger'>06.17.2024 8:37:25 PM</span>
-<span class='badge badge-default'>00:00:01:290</span>
+<span class='badge badge-success'>06.18.2024 12:21:42 AM</span>
+<span class='badge badge-danger'>06.18.2024 12:21:43 AM</span>
+<span class='badge badge-default'>00:00:00:865</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -144,7 +144,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:37:25 PM</td>
+        <td>12:21:43 AM</td>
         <td>
           Test Passed
         </td>
@@ -161,7 +161,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLoginWithInvalidCredentials</p>
             <p class="text-sm">
-              <span>8:37:38 PM</span> / <span>00:00:01:282</span>
+              <span>12:21:49 AM</span> / <span>00:00:00:863</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -170,9 +170,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLoginWithInvalidCredentials</h5>
-<span class='badge badge-success'>06.17.2024 8:37:38 PM</span>
-<span class='badge badge-danger'>06.17.2024 8:37:39 PM</span>
-<span class='badge badge-default'>00:00:01:282</span>
+<span class='badge badge-success'>06.18.2024 12:21:49 AM</span>
+<span class='badge badge-danger'>06.18.2024 12:21:50 AM</span>
+<span class='badge badge-default'>00:00:00:863</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -184,7 +184,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:37:39 PM</td>
+        <td>12:21:50 AM</td>
         <td>
           Test Passed
         </td>
@@ -201,7 +201,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLoginWithInvalidCredentials</p>
             <p class="text-sm">
-              <span>8:37:50 PM</span> / <span>00:00:01:370</span>
+              <span>12:21:56 AM</span> / <span>00:00:00:796</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -210,9 +210,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLoginWithInvalidCredentials</h5>
-<span class='badge badge-success'>06.17.2024 8:37:50 PM</span>
-<span class='badge badge-danger'>06.17.2024 8:37:51 PM</span>
-<span class='badge badge-default'>00:00:01:370</span>
+<span class='badge badge-success'>06.18.2024 12:21:56 AM</span>
+<span class='badge badge-danger'>06.18.2024 12:21:57 AM</span>
+<span class='badge badge-default'>00:00:00:796</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -224,7 +224,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:37:51 PM</td>
+        <td>12:21:57 AM</td>
         <td>
           Test Passed
         </td>
@@ -248,13 +248,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 17, 2024 08:36:45 PM</h3>
+<h3>Jun 18, 2024 12:21:26 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 17, 2024 08:37:51 PM</h3>
+<h3>Jun 18, 2024 12:21:57 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -324,7 +324,7 @@
 </div></div>
 <script>
 var timeline = {
-"verifyUserLogin":7.5,"verifyUserLoginWithInvalidCredentials":1.29,"verifyUserLoginWithInvalidCredentials":1.282,"verifyUserLoginWithInvalidCredentials":1.37
+"verifyUserLogin":3.845,"verifyUserLoginWithInvalidCredentials":0.865,"verifyUserLoginWithInvalidCredentials":0.863,"verifyUserLoginWithInvalidCredentials":0.796
 };
 </script>
 <div class="row">
