--- a/QaLegend/test-output/old/QaLegend Suite/classes.html
+++ b/QaLegend/test-output/old/QaLegend Suite/classes.html
@@ -4,19 +4,57 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qalegend.tests.LoginPageTest</td>
+<td>com.qalegend.tests.ResetPasswordPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserLogin</td>
-<td>&nbsp;</td></tr>
+<td>veriyErrorMessageWithInvalidMailId</td>
+<td>Sanity Regression </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserLoginWithInvalidCredentials</td>
+<td>veriySuccessMessageWithValidMailId</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>closeBrowser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.qalegend.tests.HomePageTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>VerifyHomePageTitle</td>
+<td>Sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserLoginDate</td>
+<td>Regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
