--- a/QaLegend/test-output/index.html
+++ b/QaLegend/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-QaLegend_Suite" class="navigator-link ">
-                    <span>C:\Users\user\git\QaLegend\QaLegend\jenkins_testng.xml</span>
+                    <span>C:\Users\user\git\QaLegend\QaLegend\grouping_testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-QaLegend_Suite" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>2 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,22 +104,17 @@
                     <div class="method-list-content passed suite-QaLegend_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.LoginPageTest" class="method navigator-link" hash-for-method="verifyUserLogin">verifyUserLogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.HomePageTest" class="method navigator-link" hash-for-method="verifyUserLoginDate">verifyUserLoginDate</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.LoginPageTest" class="method navigator-link" hash-for-method="verifyUserLoginWithInvalidCredentials(admin, 12345)">verifyUserLoginWithInvalidCredentials(admin, 12345)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.ResetPasswordPageTest" class="method navigator-link" hash-for-method="veriyErrorMessageWithInvalidMailId">veriyErrorMessageWithInvalidMailId</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.LoginPageTest" class="method navigator-link" hash-for-method="verifyUserLoginWithInvalidCredentials(admi, 123456)">verifyUserLoginWithInvalidCredentials(admi, 123456)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.LoginPageTest" class="method navigator-link" hash-for-method="verifyUserLoginWithInvalidCredentials(admi, arun@1234)">verifyUserLoginWithInvalidCredentials(admi, arun@1234)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-QaLegend_Suite" title="com.qalegend.tests.ResetPasswordPageTest" class="method navigator-link" hash-for-method="veriySuccessMessageWithValidMailId">veriySuccessMessageWithValidMailId</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-QaLegend_Suite -->
@@ -137,38 +132,36 @@
           <div class="suite-QaLegend_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.qalegend.tests.LoginPageTest</span>
+              <span class="class-name">com.qalegend.tests.HomePageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyUserLogin">
-                  </a> <!-- verifyUserLogin -->
-                  <span class="method-name">verifyUserLogin</span>
+                  <a name="verifyUserLoginDate">
+                  </a> <!-- verifyUserLoginDate -->
+                  <span class="method-name">verifyUserLoginDate</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-QaLegend_Suite-class-passed -->
+          <div class="suite-QaLegend_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.qalegend.tests.ResetPasswordPageTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="veriyErrorMessageWithInvalidMailId">
+                  </a> <!-- veriyErrorMessageWithInvalidMailId -->
+                  <span class="method-name">veriyErrorMessageWithInvalidMailId</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyUserLoginWithInvalidCredentials(admin, 12345)">
-                  </a> <!-- verifyUserLoginWithInvalidCredentials(admin, 12345) -->
-                  <span class="method-name">verifyUserLoginWithInvalidCredentials</span>
-                  <span class="parameters">(admin, 12345)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyUserLoginWithInvalidCredentials(admi, 123456)">
-                  </a> <!-- verifyUserLoginWithInvalidCredentials(admi, 123456) -->
-                  <span class="method-name">verifyUserLoginWithInvalidCredentials</span>
-                  <span class="parameters">(admi, 123456)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyUserLoginWithInvalidCredentials(admi, arun@1234)">
-                  </a> <!-- verifyUserLoginWithInvalidCredentials(admi, arun@1234) -->
-                  <span class="method-name">verifyUserLoginWithInvalidCredentials</span>
-                  <span class="parameters">(admi, arun@1234)</span>
+                  <a name="veriySuccessMessageWithValidMailId">
+                  </a> <!-- veriySuccessMessageWithValidMailId -->
+                  <span class="method-name">veriySuccessMessageWithValidMailId</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -176,22 +169,32 @@
         </div> <!-- panel QaLegend_Suite -->
         <div panel-name="test-xml-QaLegend_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\git\QaLegend\QaLegend\jenkins_testng.xml</span>
+            <span class="header-content">C:\Users\user\git\QaLegend\QaLegend\grouping_testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;QaLegend Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;groups&gt;
+    &lt;run&gt;
+      &lt;include name=&quot;Regression&quot;/&gt;
+    &lt;/run&gt;
+  &lt;/groups&gt;
+  &lt;groups&gt;
+    &lt;run&gt;
+      &lt;include name=&quot;Regression&quot;/&gt;
+    &lt;/run&gt;
+  &lt;/groups&gt;
   &lt;listeners&gt;
-    &lt;listener class-name=&quot;com.qalegend.generatereport.Listeners&quot;/&gt;
     &lt;listener class-name=&quot;com.qalegend.listeners.AnnotationTransformer&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;QaLegend Test&quot;&gt;
     &lt;parameter name=&quot;baseurl&quot; value=&quot;https://qalegend.com/billing/public/login&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.qalegend.tests.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;com.qalegend.tests.HomePageTest&quot;/&gt;
+      &lt;class name=&quot;com.qalegend.tests.ResetPasswordPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- QaLegend Test --&gt;
 &lt;/suite&gt; &lt;!-- QaLegend Suite --&gt;
@@ -205,7 +208,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">QaLegend Test (1 class)</span>
+                <span class="test-name">QaLegend Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -215,6 +218,30 @@
             <span class="header-content">Groups for QaLegend Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">Regression</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">verifyUserLoginDate</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">veriyErrorMessageWithInvalidMailId</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">veriySuccessMessageWithValidMailId</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">Sanity</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">veriyErrorMessageWithInvalidMailId</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-QaLegend_Suite" class="panel">
@@ -231,23 +258,19 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyUserLogin')
-data.setCell(0, 2, 'com.qalegend.tests.LoginPageTest')
-data.setCell(0, 3, 6547);
+data.setCell(0, 1, 'verifyUserLoginDate')
+data.setCell(0, 2, 'com.qalegend.tests.HomePageTest')
+data.setCell(0, 3, 6210);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyUserLoginWithInvalidCredentials')
-data.setCell(1, 2, 'com.qalegend.tests.LoginPageTest')
-data.setCell(1, 3, 945);
+data.setCell(1, 1, 'veriySuccessMessageWithValidMailId')
+data.setCell(1, 2, 'com.qalegend.tests.ResetPasswordPageTest')
+data.setCell(1, 3, 2155);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyUserLoginWithInvalidCredentials')
-data.setCell(2, 2, 'com.qalegend.tests.LoginPageTest')
-data.setCell(2, 3, 832);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyUserLoginWithInvalidCredentials')
-data.setCell(3, 2, 'com.qalegend.tests.LoginPageTest')
-data.setCell(3, 3, 832);
+data.setCell(2, 1, 'veriyErrorMessageWithInvalidMailId')
+data.setCell(2, 2, 'com.qalegend.tests.ResetPasswordPageTest')
+data.setCell(2, 3, 1613);
 window.suiteTableData['QaLegend_Suite']= { tableData: data, tableDiv: 'times-div-QaLegend_Suite'}
 return data;
 }
@@ -267,9 +290,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-QaLegend_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.qalegend.tests.HomePageTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">VerifyHomePageTitle</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-QaLegend_Suite" class="panel">
@@ -278,54 +308,45 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.qalegend.tests.LoginPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.qalegend.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome, https://qalegend.com/billing/public/login)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyUserLogin</span>
-                <span class="method-start">7167 ms</span>
+                <span class="method-name">verifyUserLoginDate</span>
+                <span class="method-start">7705 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=verifyUserLogin status=SUCCESS method=LoginPageTest.verifyUserLogin()[pri:0, instan...)</span>
-                <span class="method-start">13721 ms</span>
+                <span class="method-name">closeBrowser([TestResult name=verifyUserLoginDate status=SUCCESS method=HomePageTest.verifyUserLoginDate()[pri:0,...)</span>
+                <span class="method-start">13922 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qalegend.tests.ResetPasswordPageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setup(Chrome, https://qalegend.com/billing/public/login)</span>
+                <span class="method-start">14245 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">veriyErrorMessageWithInvalidMailId</span>
+                <span class="method-start">20915 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser([TestResult name=veriyErrorMessageWithInvalidMailId status=SUCCESS method=ResetPasswordPageTest.veri...)</span>
+                <span class="method-start">22529 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome, https://qalegend.com/billing/public/login)</span>
-                <span class="method-start">15748 ms</span>
+                <span class="method-start">22730 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyUserLoginWithInvalidCredentials(admi, 123456)</span>
-                <span class="method-start">20895 ms</span>
+                <span class="method-name">veriySuccessMessageWithValidMailId</span>
+                <span class="method-start">28572 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=verifyUserLoginWithInvalidCredentials status=SUCCESS method=LoginPageTest.verifyUse...)</span>
-                <span class="method-start">21728 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup(Chrome, https://qalegend.com/billing/public/login)</span>
-                <span class="method-start">21958 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyUserLoginWithInvalidCredentials(admin, 12345)</span>
-                <span class="method-start">27349 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=verifyUserLoginWithInvalidCredentials status=SUCCESS method=LoginPageTest.verifyUse...)</span>
-                <span class="method-start">28295 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup(Chrome, https://qalegend.com/billing/public/login)</span>
-                <span class="method-start">28528 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyUserLoginWithInvalidCredentials(admi, arun@1234)</span>
-                <span class="method-start">33430 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=verifyUserLoginWithInvalidCredentials status=SUCCESS method=LoginPageTest.verifyUse...)</span>
-                <span class="method-start">34263 ms</span>
+                <span class="method-name">closeBrowser([TestResult name=veriySuccessMessageWithValidMailId status=SUCCESS method=ResetPasswordPageTest.veri...)</span>
+                <span class="method-start">30728 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
