--- a/QaLegend/test-output/old/QaLegend Suite/groups.html
+++ b/QaLegend/test-output/old/QaLegend Suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>ResetPasswordPageTest.veriyErrorMessageWithInvalidMailId()[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]<br/>HomePageTest.verifyUserLoginDate()[pri:0, instance:com.qalegend.tests.HomePageTest@5af3afd9]<br/>ResetPasswordPageTest.veriySuccessMessageWithValidMailId()[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]<br/></td></tr>
+<tr><td>Sanity</td><td>ResetPasswordPageTest.veriyErrorMessageWithInvalidMailId()[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]<br/></td></tr>
+</table>
