--- a/QaLegend/test-output/old/QaLegend Suite/methods-alphabetical.html
+++ b/QaLegend/test-output/old/QaLegend Suite/methods-alphabetical.html
@@ -1,28 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>QaLegend Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c5aad4">  <td>24/06/18 00:03:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="c5aad4">  <td>24/06/18 00:03:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="c5aad4">  <td>24/06/18 00:03:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="c5aad4">  <td>24/06/18 00:03:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="c5aad4">  <td>24/06/18 00:03:26</td>   <td>-5735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="c5aad4">  <td>24/06/18 00:03:26</td>   <td>-5735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="c5aad4">  <td>24/06/18 00:03:26</td>   <td>-5735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="c5aad4">  <td>24/06/18 00:03:26</td>   <td>-5735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="6282c1">  <td>24/06/18 00:03:05</td>   <td>-27096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLogin()[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">verifyUserLogin</td> 
-  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="6282c1">  <td>24/06/18 00:03:31</td>   <td>-833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLoginWithInvalidCredentials(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">verifyUserLoginWithInvalidCredentials</td> 
-  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="6282c1">  <td>24/06/18 00:03:31</td>   <td>-833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLoginWithInvalidCredentials(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">verifyUserLoginWithInvalidCredentials</td> 
-  <td>main@1148255190</td>   <td></td> </tr>
-<tr bgcolor="6282c1">  <td>24/06/18 00:03:31</td>   <td>-833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLoginWithInvalidCredentials(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@7188af83]">verifyUserLoginWithInvalidCredentials</td> 
-  <td>main@1148255190</td>   <td></td> </tr>
+<tr bgcolor="a6d5a6">  <td>24/06/19 00:01:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="a6d5a6">  <td>24/06/19 00:00:55</td>   <td>-16804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.HomePageTest@5af3afd9]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="a6d5a6">  <td>24/06/19 00:01:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="a6d5a6">  <td>24/06/19 00:00:41</td>   <td>-30725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.HomePageTest@5af3afd9]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="a6d5a6">  <td>24/06/19 00:01:04</td>   <td>-7997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="a6d5a6">  <td>24/06/19 00:01:04</td>   <td>-7997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="b7c064">  <td>24/06/19 00:00:49</td>   <td>-23023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserLoginDate()[pri:0, instance:com.qalegend.tests.HomePageTest@5af3afd9]">verifyUserLoginDate</td> 
+  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="8885ab">  <td>24/06/19 00:01:02</td>   <td>-9813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ResetPasswordPageTest.veriyErrorMessageWithInvalidMailId()[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">veriyErrorMessageWithInvalidMailId</td> 
+  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="8885ab">  <td>24/06/19 00:01:09</td>   <td>-2156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ResetPasswordPageTest.veriySuccessMessageWithValidMailId()[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">veriySuccessMessageWithValidMailId</td> 
+  <td>main@2087258327</td>   <td></td> </tr>
 </table>
