Wait utility added in page classes.

--- a/QaLegend/test-output/old/QaLegend Suite/classes.html
+++ b/QaLegend/test-output/old/QaLegend Suite/classes.html
@@ -143,7 +143,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyProductsFilter</td>
+<td>verifyProductsFilter</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
