Wait utility added in page classes and new utilities are added in page utility class.

--- a/QaLegend/extent-reports/extent-report.html
+++ b/QaLegend/extent-reports/extent-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">QaLegend Project</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 21, 2024 10:06:39 AM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 21, 2024 09:01:10 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLogin</p>
             <p class="text-sm">
-              <span>10:06:48 AM</span> / <span>00:00:03:836</span>
+              <span>9:01:21 PM</span> / <span>00:00:04:563</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLogin</h5>
-<span class='badge badge-success'>06.21.2024 10:06:48 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:06:51 AM</span>
-<span class='badge badge-default'>00:00:03:836</span>
+<span class='badge badge-success'>06.21.2024 9:01:21 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:01:26 PM</span>
+<span class='badge badge-default'>00:00:04:563</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:06:51 AM</td>
+        <td>9:01:26 PM</td>
         <td>
           Test Passed
         </td>
@@ -121,7 +121,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLoginWithInvalidCredentials</p>
             <p class="text-sm">
-              <span>10:07:00 AM</span> / <span>00:00:00:771</span>
+              <span>9:01:41 PM</span> / <span>00:00:00:860</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -130,9 +130,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLoginWithInvalidCredentials</h5>
-<span class='badge badge-success'>06.21.2024 10:07:00 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:07:01 AM</span>
-<span class='badge badge-default'>00:00:00:771</span>
+<span class='badge badge-success'>06.21.2024 9:01:41 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:01:41 PM</span>
+<span class='badge badge-default'>00:00:00:860</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -144,7 +144,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:07:01 AM</td>
+        <td>9:01:41 PM</td>
         <td>
           Test Passed
         </td>
@@ -161,7 +161,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLoginWithInvalidCredentials</p>
             <p class="text-sm">
-              <span>10:07:08 AM</span> / <span>00:00:00:908</span>
+              <span>9:01:51 PM</span> / <span>00:00:01:196</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -170,9 +170,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLoginWithInvalidCredentials</h5>
-<span class='badge badge-success'>06.21.2024 10:07:08 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:07:09 AM</span>
-<span class='badge badge-default'>00:00:00:908</span>
+<span class='badge badge-success'>06.21.2024 9:01:51 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:01:52 PM</span>
+<span class='badge badge-default'>00:00:01:196</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -184,7 +184,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:07:09 AM</td>
+        <td>9:01:52 PM</td>
         <td>
           Test Passed
         </td>
@@ -201,7 +201,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLoginWithInvalidCredentials</p>
             <p class="text-sm">
-              <span>10:07:22 AM</span> / <span>00:00:00:880</span>
+              <span>9:02:03 PM</span> / <span>00:00:00:888</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -210,9 +210,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLoginWithInvalidCredentials</h5>
-<span class='badge badge-success'>06.21.2024 10:07:22 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:07:23 AM</span>
-<span class='badge badge-default'>00:00:00:880</span>
+<span class='badge badge-success'>06.21.2024 9:02:03 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:02:04 PM</span>
+<span class='badge badge-default'>00:00:00:888</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -224,7 +224,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:07:23 AM</td>
+        <td>9:02:04 PM</td>
         <td>
           Test Passed
         </td>
@@ -241,7 +241,7 @@
           <div class="test-detail">
             <p class="name">veriyErrorMessageWithInvalidMailId</p>
             <p class="text-sm">
-              <span>10:07:31 AM</span> / <span>00:00:01:255</span>
+              <span>9:02:20 PM</span> / <span>00:00:02:139</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -250,9 +250,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">veriyErrorMessageWithInvalidMailId</h5>
-<span class='badge badge-success'>06.21.2024 10:07:31 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:07:32 AM</span>
-<span class='badge badge-default'>00:00:01:255</span>
+<span class='badge badge-success'>06.21.2024 9:02:20 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:02:22 PM</span>
+<span class='badge badge-default'>00:00:02:139</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -264,7 +264,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:07:32 AM</td>
+        <td>9:02:22 PM</td>
         <td>
           Test Passed
         </td>
@@ -281,7 +281,7 @@
           <div class="test-detail">
             <p class="name">veriySuccessMessageWithValidMailId</p>
             <p class="text-sm">
-              <span>10:07:40 AM</span> / <span>00:00:01:607</span>
+              <span>9:02:31 PM</span> / <span>00:00:02:367</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -290,9 +290,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">veriySuccessMessageWithValidMailId</h5>
-<span class='badge badge-success'>06.21.2024 10:07:40 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:07:41 AM</span>
-<span class='badge badge-default'>00:00:01:607</span>
+<span class='badge badge-success'>06.21.2024 9:02:31 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:02:33 PM</span>
+<span class='badge badge-default'>00:00:02:367</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -304,7 +304,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:07:41 AM</td>
+        <td>9:02:33 PM</td>
         <td>
           Test Passed
         </td>
@@ -321,7 +321,7 @@
           <div class="test-detail">
             <p class="name">VerifyHomePageTitle</p>
             <p class="text-sm">
-              <span>10:07:50 AM</span> / <span>00:00:03:135</span>
+              <span>9:02:42 PM</span> / <span>00:00:05:605</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -330,9 +330,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">VerifyHomePageTitle</h5>
-<span class='badge badge-success'>06.21.2024 10:07:50 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:07:54 AM</span>
-<span class='badge badge-default'>00:00:03:135</span>
+<span class='badge badge-success'>06.21.2024 9:02:42 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:02:47 PM</span>
+<span class='badge badge-default'>00:00:05:605</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -344,7 +344,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:07:54 AM</td>
+        <td>9:02:47 PM</td>
         <td>
           Test Passed
         </td>
@@ -361,7 +361,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLoginDate</p>
             <p class="text-sm">
-              <span>10:08:02 AM</span> / <span>00:00:02:650</span>
+              <span>9:02:56 PM</span> / <span>00:00:03:376</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -370,9 +370,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLoginDate</h5>
-<span class='badge badge-success'>06.21.2024 10:08:02 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:08:05 AM</span>
-<span class='badge badge-default'>00:00:02:650</span>
+<span class='badge badge-success'>06.21.2024 9:02:56 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:03:00 PM</span>
+<span class='badge badge-default'>00:00:03:376</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=8</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -384,7 +384,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:08:05 AM</td>
+        <td>9:03:00 PM</td>
         <td>
           Test Passed
         </td>
@@ -401,7 +401,7 @@
           <div class="test-detail">
             <p class="name">verifyUserManagementUserOptions</p>
             <p class="text-sm">
-              <span>10:08:11 AM</span> / <span>00:00:04:313</span>
+              <span>9:03:09 PM</span> / <span>00:00:04:369</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -410,9 +410,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserManagementUserOptions</h5>
-<span class='badge badge-success'>06.21.2024 10:08:11 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:08:16 AM</span>
-<span class='badge badge-default'>00:00:04:313</span>
+<span class='badge badge-success'>06.21.2024 9:03:09 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:03:13 PM</span>
+<span class='badge badge-default'>00:00:04:369</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=9</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -424,7 +424,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:08:16 AM</td>
+        <td>9:03:13 PM</td>
         <td>
           Test Passed
         </td>
@@ -441,7 +441,7 @@
           <div class="test-detail">
             <p class="name">verifyAddUser</p>
             <p class="text-sm">
-              <span>10:08:24 AM</span> / <span>00:00:09:159</span>
+              <span>9:03:21 PM</span> / <span>00:00:09:311</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -450,9 +450,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyAddUser</h5>
-<span class='badge badge-success'>06.21.2024 10:08:24 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:08:34 AM</span>
-<span class='badge badge-default'>00:00:09:159</span>
+<span class='badge badge-success'>06.21.2024 9:03:21 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:03:30 PM</span>
+<span class='badge badge-default'>00:00:09:311</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=10</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -464,7 +464,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:08:34 AM</td>
+        <td>9:03:30 PM</td>
         <td>
           Test Passed
         </td>
@@ -481,7 +481,7 @@
           <div class="test-detail">
             <p class="name">veriyLoginWithNewlyAddedUser</p>
             <p class="text-sm">
-              <span>10:08:41 AM</span> / <span>00:00:12:143</span>
+              <span>9:04:03 PM</span> / <span>00:00:13:993</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -490,9 +490,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">veriyLoginWithNewlyAddedUser</h5>
-<span class='badge badge-success'>06.21.2024 10:08:41 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:08:53 AM</span>
-<span class='badge badge-default'>00:00:12:143</span>
+<span class='badge badge-success'>06.21.2024 9:04:03 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:04:17 PM</span>
+<span class='badge badge-default'>00:00:13:993</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=11</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -504,7 +504,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:08:53 AM</td>
+        <td>9:04:17 PM</td>
         <td>
           Test Passed
         </td>
@@ -521,7 +521,7 @@
           <div class="test-detail">
             <p class="name">verifyBookingListWithoutAnyBooking</p>
             <p class="text-sm">
-              <span>10:09:00 AM</span> / <span>00:00:07:417</span>
+              <span>9:04:26 PM</span> / <span>00:00:14:832</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -530,9 +530,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyBookingListWithoutAnyBooking</h5>
-<span class='badge badge-success'>06.21.2024 10:09:00 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:09:08 AM</span>
-<span class='badge badge-default'>00:00:07:417</span>
+<span class='badge badge-success'>06.21.2024 9:04:26 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:04:40 PM</span>
+<span class='badge badge-default'>00:00:14:832</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=12</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -544,7 +544,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:09:08 AM</td>
+        <td>9:04:40 PM</td>
         <td>
           Test Passed
         </td>
@@ -561,7 +561,7 @@
           <div class="test-detail">
             <p class="name">verifyProductsFilter</p>
             <p class="text-sm">
-              <span>10:09:16 AM</span> / <span>00:00:05:857</span>
+              <span>9:04:48 PM</span> / <span>00:00:24:764</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -570,9 +570,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyProductsFilter</h5>
-<span class='badge badge-success'>06.21.2024 10:09:16 AM</span>
-<span class='badge badge-danger'>06.21.2024 10:09:21 AM</span>
-<span class='badge badge-default'>00:00:05:857</span>
+<span class='badge badge-success'>06.21.2024 9:04:48 PM</span>
+<span class='badge badge-danger'>06.21.2024 9:05:13 PM</span>
+<span class='badge badge-default'>00:00:24:764</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=13</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -584,7 +584,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:09:21 AM</td>
+        <td>9:05:13 PM</td>
         <td>
           Test Passed
         </td>
@@ -608,13 +608,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 21, 2024 10:06:39 AM</h3>
+<h3>Jun 21, 2024 09:01:10 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 21, 2024 10:09:22 AM</h3>
+<h3>Jun 21, 2024 09:05:13 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -684,7 +684,7 @@
 </div></div>
 <script>
 var timeline = {
-"verifyUserLogin":3.836,"verifyUserLoginWithInvalidCredentials":0.771,"verifyUserLoginWithInvalidCredentials":0.908,"verifyUserLoginWithInvalidCredentials":0.88,"veriyErrorMessageWithInvalidMailId":1.255,"veriySuccessMessageWithValidMailId":1.607,"VerifyHomePageTitle":3.135,"verifyUserLoginDate":2.65,"verifyUserManagementUserOptions":4.313,"verifyAddUser":9.159,"veriyLoginWithNewlyAddedUser":12.143,"verifyBookingListWithoutAnyBooking":7.417,"verifyProductsFilter":5.857
+"verifyUserLogin":4.563,"verifyUserLoginWithInvalidCredentials":0.86,"verifyUserLoginWithInvalidCredentials":1.196,"verifyUserLoginWithInvalidCredentials":0.888,"veriyErrorMessageWithInvalidMailId":2.139,"veriySuccessMessageWithValidMailId":2.367,"VerifyHomePageTitle":5.605,"verifyUserLoginDate":3.376,"verifyUserManagementUserOptions":4.369,"verifyAddUser":9.311,"veriyLoginWithNewlyAddedUser":13.993,"verifyBookingListWithoutAnyBooking":14.832,"verifyProductsFilter":24.764
 };
 </script>
 <div class="row">
